- fixed wrong sly-button font size and added font-family:inherit for correct displaying, (again). - added some margins to sly-contentpage-slice-output for better readability on modules in the backend (much more better now).

--- a/sally/backend/assets/css/form.css
+++ b/sally/backend/assets/css/form.css
@@ -15,13 +15,14 @@ select {
 .sly-button, input[type=submit], input[type=reset], input[type=button] {
 	background-image: url(../button.png);
 	background-repeat: repeat-x;
-	padding: 1px 6px;
+	padding: 0px 6px;
 	color: $drk_grey;
 	text-decoration: none;
 	border: 1px solid $lt_grey;
 	+border-radius($brd_rad);
 	margin-left: 145px;
-	font-size: 85%;
+	font-size: 100%;
+	font-family: inherit;
 	width: auto;
 }
 
